--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,6 @@ jobs:
 
       - run: "pip install -r requirements.txt"
 
-      - uses: "Yeicor/cadquery-action@v3.1.2"
+      - uses: "Yeicor/ocp-action@v3.1.3"
         with:
           scripts: "src/main.py"
